# marain

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  EXAMPLE.env  LICENSE  PRD.md  README.md  func_test.lat  hello.lat  loop_test.lat  package.json
.github/workflows/: README.md  coverage.yml  dependencies.yml  release.yml  rust.yml
.sentrux/: rules.toml
config/: README.md  config.api.yaml  config.content.yaml  config.system.dev.yaml  config.system.prd.yaml
crates/marain-cli/: Cargo.toml
crates/marain-cli/src/: args.rs  driver.rs  error.rs  main.rs  paths.rs
crates/marain-cli/tests/: cli_e2e.rs
crates/marain-core/: Cargo.toml
crates/marain-core/src/: ast.rs  ast_tests.rs  emit.rs  emit_tests.rs  error.rs  lib.rs  shim.rs  source.rs  span.rs  token.rs
crates/marain-core/src/emit/: expr.rs
crates/marain-core/src/lexer/: comments.rs  cursor.rs  error.rs  idents.rs  indent.rs  keywords.rs  mod.rs  mod_tests.rs  numbers.rs  strings.rs
crates/marain-core/src/parser/: error.rs  expressions.rs  grammar.rs  mod.rs  mod_tests.rs
crates/marain-core/tests/: e2e_control_flow.rs  e2e_hello_world.rs  emit_goldens.rs  error_goldens.rs
crates/marain-core/tests/fixtures/: 01_hello_world.expected.rs  02_let_integer.expected.rs  02_let_integer.lat  03_let_string.expected.rs  03_let_string.lat  04_let_mutable.expected.rs  04_let_mutable.lat  05_let_then_print.expected.rs  06_all_macros.expected.rs  06_all_macros.lat  07_integer_separators.expected.rs  07_integer_separators.lat  08_rust_keyword_escape.expected.rs  08_rust_keyword_escape.lat  09_line_comments.expected.rs  09_line_comments.lat  10_si_simple.expected.rs  10_si_simple.lat  11_si_nested.expected.rs  11_si_nested.lat  12_arithmetic.expected.rs  12_arithmetic.lat  13_booleans.expected.rs  13_booleans.lat  14_comparison.expected.rs  14_comparison.lat  15_aliter_chain.expected.rs  15_aliter_chain.lat  16_dum.expected.rs  16_dum.lat  17_semper_interrumpe.expected.rs  17_semper_interrumpe.lat  18_functio_unit.expected.rs  18_functio_unit.lat  19_functio_typed.expected.rs  19_functio_typed.lat  20_functio_multi_param.expected.rs  20_functio_multi_param.lat  21_functio_call.expected.rs  21_functio_call.lat  (+16 more)
crates/marain-core/tests/fixtures/errors/: 01_unexpected_char.expected.txt  02_unterminated_string.expected.txt  02_unterminated_string.lat  03_missing_period.expected.txt  03_missing_period.lat  04_unescapable_keyword.expected.txt  04_unescapable_keyword.lat  05_no_sigil_in_binding.expected.txt  05_no_sigil_in_binding.lat  06_block_comments_deferred.expected.txt  06_block_comments_deferred.lat  07_no_block_after_if.expected.txt  (+25 more)
docs/: core-lexicon.md  keywords.html
docs/architecture/: ADR-0001-multi-frontend-ir.md
documentation/: AGENTS-README.md  AUTH-PLAN.md  AUTHZ-PLAN.md  CRITICAL-PATHS.md  DESIGN.md  DEV-TASKS.md  DEVELOPER-GUIDE.md  MARAIN-ARCH.md  README.md  User_Crate_Review.md
documentation/CLI/: marc-cli-documentation.md
documentation/REST-API/: openapi.json
documentation/configuration-management-system/: configuration-management-system.md
documentation/entity-content-storage-system/: entity-content-storage.md
documentation/entity-management-system/: entity-management.md
documentation/historic-dev-tasks/: dev-task-history.md
documentation/historic-system-docs/: DESIGN.md  MARAIN-ARCH.md  REQUIREMENTS.md
documentation/hot-reload-system/: file-management-spec.md  hot-reload-implementation-plan.md  hot-reload-summary.md
documentation/roadmap-experiments/: swagger-ui-plugin
documentation/user-management-system/: authentication.md  authorization.md  ulid-uuid-conversion.md  user-management-system.md  user-management.md
schemas/: README.md  all_fields.schema.yaml  links.schema.yaml  multi.schema.yaml  snippet.schema.yaml  user.schema.yaml
scripts/: clean-rebuild.sh  kill_background_instances.sh  rebuild-and-test.sh  test-api.sh  test-revisions-detailed.sh  test-revisions.sh
src-tauri/: .gitignore  Cargo.toml
src-tauri/api/: Cargo.toml
src-tauri/api/src/: error.rs  lib.rs  middleware_hooks.rs  middleware_hooks_tests.rs  models.rs  server.rs  test_data.rs
src-tauri/api/src/handlers/: auth.rs  entity.rs  health.rs  mod.rs
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/src/: lib.rs  logging.rs  main.rs
src-tauri/authz/: Cargo.toml
src-tauri/authz/src/: error.rs  lib.rs  types.rs
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/cli/src/commands/: config.rs  health.rs
src-tauri/cli/src/utils/: env_paths.rs  mod.rs  project_root.rs
src-tauri/cli/tests/: cli_tests.rs
src-tauri/content/: Cargo.toml
src-tauri/content/src/: error.rs  hashing.rs  lib.rs  operations.rs  utils.rs
src-tauri/database/: Cargo.toml
src-tauri/database/data/test_schemas/: test.schema.yaml
src-tauri/database/src/: error.rs  init.rs  lib.rs  storage.rs
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: entity.rs  error.rs  lib.rs  schema_loader.rs
src-tauri/fields/: Cargo.toml
src-tauri/fields/src/: error.rs  field_types.rs  lib.rs  validation.rs
src-tauri/json-cache/: Cargo.toml
src-tauri/json-cache/src/: error.rs  lib.rs
src-tauri/schema-manager/: Cargo.toml
src-tauri/schema-manager/src/: action_executor.rs  action_generator.rs  config_access.rs  configuration.rs  diff_engine.rs  lib.rs  version_tracker.rs  watcher.rs
src-tauri/user/: Cargo.toml
src-tauri/user/src/: database.rs  error.rs  lib.rs  secure_log.rs  test_secure_log_restart.rs  ulid_uuid_bridge.rs
src-tauri/user/src/auth/: magic_link.rs  mod.rs  passkey.rs  session.rs  store.rs  types.rs
src/routes/snippets/: +page.svelte
tasks/: BACKLOG.md  CONTINUITY.md  DECISIONS.md  LESSONS.md  ROADMAP.md  TODO.md  questions_and_answers_1.md
tasks/decisions/: R09_line_comments.md  R10_block_si.md  R11_12_operators_control_flow.md  R13_functio_calls.md  R14_15_pro_ranges_nihil.md  R16_fit_reassignment.md  R17_fstrings.md  R18_precedence_aware_emit.md
tasks/notes/: pre-arch_planning.txt  v0.2_loops_final_decisions.md
tasks/todos/: 05-31-2026_TODO.md
