[workspace]
members = [
    "app",
    "schema-manager",
    "database",
    "api",
    "entities",
    "fields",
    "json-cache",
    "content",
    "user",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# Use vendored OpenSSL to avoid system dependency issues in CI
openssl = { version = "0.10", features = ["vendored"] }
