[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.1", features = ["serde"] }
thiserror = "1.0"

# Import local crates
database = { path = "../database" }
schema-manager = { path = "../schema-manager" }
json-cache = { path = "../json-cache" }
content = { path = "../content" }
user = { path = "../user" }

# Authentication dependencies
tower-sessions = "0.14"
webauthn-rs = "0.5"