[package]
name = "content"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"

# For working with entity and field types
entities = { path = "../entities" }
fields = { path = "../fields" }