[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
once_cell = "1.19"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
entities = { path = "../entities" }
fields = { path = "../fields" }

[dev-dependencies]
tempfile = "3.10"