[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
thiserror = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"
fields = { path = "../fields" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }