[package]
name = "json-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1.42", features = ["sync"] }

# For integration with other crates
database = { path = "../database" }
entities = { path = "../entities" }
fields = { path = "../fields" }
