[package]
name = "schema-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
entities = { path = "../entities" }
notify = "6.1"
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
once_cell = "1.19"