[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Cryptography for secure logging
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# UUID/ULID
ulid = "1.1"

# File operations
tokio-fs = "0.1"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.18"